<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/add">
        <item
            android:id="@+id/action_add_task"
            android:icon="@drawable/ic_add_task_light"
            android:title="@string/add_task"/>
        <item
            android:id="@+id/action_add_category"
            android:icon="@drawable/ic_add_task_light"
            android:title="@string/add_category"/>
        <item
            android:id="@+id/action_remove_category"
            android:icon="@drawable/ic_add_task_light"
            android:title="@string/remove_category"/>
    </group>

    <it.neokree.materialtabs.MaterialTabHost
        android:id="@+id/materialTabHost"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:textColor="#FFFFFF"
        app:primaryColor="@color/colorPrimary"
        app:accentColor="@color/colorAccent" />

</menu>
